responsive layout bug fixes

--- a/src/app.styles.scss
+++ b/src/app.styles.scss
@@ -289,6 +289,14 @@ img {
 
   .temp {
     padding: 0 !important;
+    font-size: 80px !important; 
+  }
+
+  .temp-box {
+    span {
+      font-size: 80px !important;
+      margin-left: -30px !important;
+    }
   }
 
   .tab-2 {
